--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to MyBank accounts related local APIs "
+  message: "Welcome to MyBank accounts related prod APIs "
   contactDetails:
     name: "Adithya KP - Developer"
     email: "adithyakp@mybank.com"
