--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -2,7 +2,7 @@ build:
   version: "2.0"
 
 cards:
-  message: "Welcome to MyBank accounts related local APIs "
+  message: "Welcome to MyBank accounts related qa APIs "
   contactDetails:
     name: "Adithya KP - Developer"
     email: "adithyakp@mybank.com"
