--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to MyBank accounts related local git APIs "
+  message: "Welcome to MyBank accounts related local APIs "
   contactDetails:
     name: "Adithya KP - Developer"
     email: "adithyakp@mybank.com"
